[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outcome-tracker"
version = "1.0.0"
description = "A sophisticated multi-domain reward tracking system for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Casey", email = "casey@example.com" }
]
maintainers = [
    { name = "Casey", email = "casey@example.com" }
]
keywords = [
    "ai",
    "agent",
    "reward",
    "tracking",
    "reinforcement-learning",
    "outcome",
    "multi-domain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
export = [
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/casey/outcome-tracker"
Documentation = "https://github.com/casey/outcome-tracker#readme"
Repository = "https://github.com/casey/outcome-tracker"
Issues = "https://github.com/casey/outcome-tracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
outcome_tracker = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
